# vision-playground

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/oxford_pet_sample/: README.md  manifest.csv
docs/: experiment-design.md  public-api.md  reproducibility.md  result-interpretation.md  review-guide.md
experiments/: create_reproducibility_manifest.py  run_adaptive_public_sample.py  run_adaptive_sensitivity.py  run_denoising_comparison.py  run_denoising_public_sample.py  run_edge_detection_comparison.py  run_edge_public_sample.py  run_inspected_public_sample.py  run_labeled_dataset_evaluation.py  run_public_image_sample.py  run_thresholding_comparison.py
results/: README.md  adaptive_sensitivity_metrics.csv  denoising_metrics.csv  edge_detection_metrics.csv  experiment_summary.csv  reproducibility_manifest.csv  thresholding_metrics.csv
results/adaptive_public_sample/: README.md  adaptive_parameter_summary.csv
results/denoising_public_sample/: README.md  denoising_summary.csv
results/edge_public_sample/: README.md  edge_detection_summary.csv
results/inspected_public_sample/: README.md  input_inspection.csv  workflow_summary.csv
src/vision_playground/: cli.py  (+16 more)
tests/: test_adaptive_sample.py  test_cli.py  test_denoising.py  test_denoising_sample.py  test_edge_detection.py  test_edge_sample.py  test_evaluation.py  test_experiment.py  test_labeled_dataset.py  test_package.py  test_real_images.py  test_reproducibility.py  test_runner.py  test_sensitivity.py  test_synthetic.py  test_thresholding.py  test_workflow.py
(+4 files in other folders)
