[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-playground"
version = "0.4.0"
description = "Reproducible computer vision experiments with quantitative evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "numpy>=1.23",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "image-dataset-inspector @ git+https://github.com/cab0a/image-dataset-inspector.git@v0.1.2",
]
workflow = [
    "image-dataset-inspector @ git+https://github.com/cab0a/image-dataset-inspector.git@v0.1.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
